# async_file_uploader

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/config/: asgi.py  celery.py  settings.py  urls.py
src/file_uploader/: admin.py  consumers.py  models.py  routing.py  serializers.py  tasks.py  urls.py  views.py
src/file_uploader/migrations/: 0001_initial.py
